--- a/grid_map_demos/config/tutorial_demo.yaml
+++ b/grid_map_demos/config/tutorial_demo.yaml
@@ -1,6 +1,9 @@
-grid_map_topic: /grid_map_tutorial_demo/grid_map
+grid_map_topic: /elevation_mapping/elevation_map_raw
+#aktivoi pcd-->gridmap muunnokseen
+#grid_map_topic: /grid_map_pcl_loader_node/grid_map_from_raw_pointcloud
 
 grid_map_visualizations:
+
 
   - name: elevation_points
     type: point_cloud
